# Nunicode

./: .cproject  .gitignore  .project  BUILD  CHANGELOG  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake-testbuild.sh
cmake/: FindSqlite3.cmake  GitVersion.cmake  Toolchain-Amd64.cmake  Toolchain-AndroidArm.cmake  Toolchain-AndroidMipsel.cmake  Toolchain-Clang.cmake  Toolchain-Mingw32.cmake
doc/: README.md
libnu/: CMakeLists.txt  build_config.h  casemap.h  casemap_internal.h  cesu8.c  cesu8.h  cesu8_internal.h  config.h  decomps.c  decomps.h  defines.h  ducet.c  ducet.h  extra.c  extra.h  fnv.h  iterators.c  iterators.h  libnu.h  mph.h  strcoll.c  strcoll.h  strcoll_internal.c  strcoll_internal.h  strings.c  strings.h  test.c  tofold.c  tolower.c  tolower.h  tounaccent.c  toupper.c  toupper.h  udb.c  udb.h  unaccent.h  utf16.c  utf16.h  utf16_internal.h  utf16be.c  (+20 more)
packaging/: Makefile
samples/: CMakeLists.txt  folding.c  revread.c  special_casing.c  unaccent.c  utf16.c  utf8.c
sqlite3/: BUILD  CMakeLists.txt  Makefile  nu.c  nu.h  nusqlite3.c  nusqlite3.h  test.db  test_db.sh  tests.sql  testsuite  version.h
sqlite3/prof/: CMakeLists.txt  README  casemapping.c  like.c
sqlite3/samples/: CMakeLists.txt  autoextension.c  loadextension.c
src/: build_config.h  cesu8.c  cesu8.h  iterators.c  iterators.h  libnu.h  utf8.c  utf8.h  utf8_internal.h
staging/: Makefile  Makefile.packets  README  cmake-testbuild.sh
tests/: CMakeLists.txt  basic_error_handling_test.c  casemap_test.c  cesu8_test.c  conformance_test.c  decomps_test.c  ducet_test.c  extra_test.c  fnv_test.c  iterators_test.c  main.c  mph_test.c  strcmp_test.c  strcoll_internal_test.c  strcoll_test.c  strings.c  strings_test.c  switch_test_base.c  switch_test_base.h  udb_test.c  unaccent_test.c  utf16_test.c  utf16be_test.c  utf16he_test.c  utf16le_test.c  utf32_test.c  utf32be_test.c  utf32he_test.c  utf32le_test.c  utf8_test.c  validation_test.c  version_test.c
tests/icu/: CMakeLists.txt  iter_nu.c  strcasecoll_icu.c  strcoll_nu.c
tests/prof/: iter_icu.c  iter_nu.c  strcasecoll_nu.c  strcoll_icu.c
tools/: CMakeLists.txt  allkeys-tokeys  allkeys.go  bmponly  bmponly.go  casefolding-tofolding  casefolding-tofolding.go  casefolding.go  codepoints-totests  coldata.py  contractions-toc  contractions-toc.go  contractions-totests  contractions.go  decomps-tokeys  decomps-tounaccent  decomps-tounaccent.go  decomps.go  filter-sortable  filter-sortable.go  filtered-tomph  filtered-tomph.go  mph  mph-combined  mph-combined.go  mph-indexed  mph-indexed.go  mph.go  mph.py  special-tolower  special-tolower.go  special-toupper  special-toupper.go  specialcasing.go  states.go  templates.go  unicodedata.go  unidata-tolower  unidata-tolower.go  unidata-tosortable  (+5 more)
tools/debug/: test_codepoints  test_contractions
tools/templates/: contractions_consts.tmpl  contractions_header.tmpl  contractions_includes.tmpl  contractions_roots.tmpl  mph_c.tmpl  mph_combined.tmpl  mph_g.tmpl  mph_header.tmpl  mph_i.tmpl  mph_includes.tmpl
unicode.org/: CMakeLists.txt  CaseFolding.txt  README  SpecialCasing.txt  UnicodeData.txt  allkeys.txt  decomps.txt
